--- a/index.html
+++ b/index.html
@@ -156,16 +156,17 @@ p {
 
 <!-- Section 5: Contract + Buttons -->
 <section class="section-bg">
-    <p class="token">CA: INSERT_HOSPITAL_TOKEN_HERE</p>
+    <p class="token">CA: </p>
 
-    <button class="button-buy" onclick="window.open('https://your-buy-link.com', '_blank')">
+    <button class="button-buy" onclick="window.open('https://pump.fun/board', '_blank')">
         🚨 BUY HOSPITAL COIN 🚨
     </button>
 
-    <button class="button-x" onclick="window.open('https://twitter.com/YourXProfile', '_blank')">
+    <button class="button-x" onclick="window.open('https://x.com/i/communities/1962995090198299058', '_blank')">
         JOIN THE X COMMUNITY
     </button>
 </section>
 
 </body>
 </html>
+
